--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         <div class="grid-cell" id="grid-cell-3-3"></div>
 
     </div>
+    <div><span id = "test0">hah</span></div>
+    <div><span id = "test1">hah</span></div>
+    <div><span id = "test2">hah</span></div>
+    <div><span id = "test3">hah</span></div>
 
 
     <!-- Game Over -->
@@ -56,7 +60,7 @@
          style="position: absolute; top:300px; left:100px; width:500px; height:650px; z-index:900;  display:none;">
         <div id="gameover-title">Game Over!</div>
         <div class="showbutton" id="go-score"><div id="score-title">分数</div><div id="score-number">0</div></div>
-        <div class="showbutton" id="go-about">老薛出品</div>
+        <div class="showbutton" id="go-about"><a href="javascript:replay2048();">重播</a></div>
         <div class="showbutton" id="go-restart"><a href="javascript:restart();">重新开始</a></div>
 
     </div>
